--- a/website/css/components/Header.scss
+++ b/website/css/components/Header.scss
@@ -2,6 +2,18 @@
 
 header {
     display: grid;
+    margin-bottom: 4em;
+
+    & h1.title {
+        font-size: 32px;
+        margin: 4em 0 0 0;
+    }
+
+    & p.introduction {
+        font-size: 22px;
+        margin-bottom: 2em;
+    }
+
     & a {
         text-decoration: none;
     }
