--- a/website/css/components/Card.scss
+++ b/website/css/components/Card.scss
@@ -62,6 +62,10 @@
         text-decoration: none;
     }
 
+    & .resource-list a:visited {
+        color: hsl(210, 5%, 38%);
+    }
+
     & .resource-list a:hover {
         color: hsl(210, 40%, 38%);
     }
